clusters/desktop/navidrome/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: default
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.60.3
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
      volumes:
        - name: data
          nfs:
            server: storage.host
            path: /persist/apps/navidrome
            readOnly: false
        - name: music
          nfs:
            server: storage.host
            path: /mnt/data/music
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: default
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4533
