clusters/desktop/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: subsonic
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  hostnames:
  - "subsonic.nkmrk.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: navidrome
      port: 80
